Fixed: preventing discs overlapping

--- a/scss/partials/_custom.scss
+++ b/scss/partials/_custom.scss
@@ -200,3 +200,11 @@ input.custom-range
         margin-top: 20px;
     }
 }
+
+@media screen and (min-height: 1400px)
+{
+    .pushDown
+    {
+        margin-top: 40%;
+    }
+}
